# claude-proxy-mitm-PII-anonymizer

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_BUILD.md  Dockerfile  SETUP_VPN.md  SETUP_VPS.md  SYSTEM_PROMPT.md  console.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mcp.conf  proxifier.py  pyproject.toml  requirements.txt  rules.json  start.bat
assets/: rules.jsonc
docker/: gw-mcp.dockerfile  headscale.yaml  proxy.dockerfile  tailscale-entrypoint.sh  tailscale-post-auth.sh  tailscale.dockerfile  ts-test-entrypoint.sh  ts-test.dockerfile  validator.dockerfile  wireguard-entrypoint.sh  wireguard.dockerfile
proxy/: anxious_filter.py  cache.py  claude_system_prompt.py  control_socket.py  engine.py  entity_cache_log.py  image_anonymizer.py  main.py  mappings.py  rules.py
proxy/entity_finder/: __init__.py  mappings_finder.py  ner_finder.py  presidio_finder.py  regex_finder.py
scripts/: ask_bitnet.py  deploy.sh  finetune_ner.py  headscale-setup.sh  install-cert.sh  local-proxy-setup.sh  local-proxy-teardown.sh  push_saved_request.py  restore.sh  send_test_email.sh  test_image_anonymizer_preview.py  test_ner.py  tunnel-setup.sh
src/: claude_system_prompt.py  control_socket.py  event_socket.py  image_anonymizer.py  mappings.py  proxy.py  rule_applier.py  rules.py  text_anonymizer.py  viewer.py
src/entity_finder/: __init__.py  mappings_finder.py  ner_finder.py  presidio_finder.py  regex_finder.py
tests/: conftest.py  test_anonimizer.py  test_image_anonymizer.py  test_ner_model.py
validator/: __init__.py  bitnet_client.py  dataset_builder.py  evaluator.py  main.py  scheduler.py  tester.py  trainer.py
(+2 files in other folders)
